tests/syntax-error/call-wrong-params.silly
// RUN: cd %S
// RUN: %Not %ExeSilly -g call-wrong-params.silly -o %t.exe 2>&1 | %FileCheck %s
// CHECK: call-wrong-params.silly: In function ‘foo’:
// CHECK: call-wrong-params.silly:17:5: error: Mismatched number of arguments to call of function bar.  Passing: 0, required: 1.
// CHECK:    17 |     CALL bar( );
// CHECK:       |     ^

MODULE;

FUNCTION bar ( INT16 w )
{
    RETURN;
};

FUNCTION foo ( ) : INT32
{
    CALL bar( );

    RETURN 42;
};
